--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-poner html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Diseño Web EFP Nº7</title>
+</head>
+<body>
+    <h1>pagina para codigos de ejemplos...</h1>
+</body>
+</html>
